feat:update visibility
